# crazy-808

./: .gitignore  Cargo.toml  README.md  TODO.md
embedded-app/: Cargo.toml  Cross.toml  Dockerfile  deploy.sh
embedded-app/.cargo/: config
embedded-app/src/: buttons.rs  instrument_select.rs  leds.rs  main.rs  shared_pull_up_input_expander.rs  variation_toggle.rs
engine/: Cargo.toml  build.rs
engine/src/: core.rs  engine.rs  lib.rs  sound.rs  state.proto
src/: .gitignore  generate-proto.sh  index.html  package.json
src-tauri/: Cargo.toml  audio  build.rs  tauri.conf.json
src-tauri/src/: engine.rs  main.rs  sound.rs  state.proto
src/src/: App.tsx  Store.ts  index.tsx
src/src/Component/: ChannelButtons.tsx  ChannelIndicators.tsx  InstrumentSelect.tsx  StartStoppButton.tsx
web-gui/: generate-proto.sh
web-gui/src/: StoreContext.tsx  index.tsx
web-gui/src/Component/: VariationSelector.tsx
