[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.5"
prost = "0.11.5"
protobuf-src = "1.1.0"

[dependencies]
rodio = "0.16.0"
bytes = "1.3.0"
prost = "0.11.5"

